--- a/tenMyths/index.html
+++ b/tenMyths/index.html
@@ -59,29 +59,18 @@ $(document).ready(function(){
 
 <div id="#stuff" class="col-md-9" style="background-color: #FFFFFF;min-height: 1100px;"">
 <h1 class="page-header-content">some title thing</h1>
-<p>
-<figure class="wrapright" style="width: 425px; height: auto;">
-<img 
-	src="-includes/xxx" 
-	alt="xxx, on Flickr" 
-   	width="xxx" height="xxx" 
-    class="img-responsive img-rounded"
-    />
-    <figcaption>
-    Credit: <a href="-includes/xxx" target="_blank" class="credit">xxx, on Flickr</a>, used under a CC-BY 2.0 license.
-    </figcaption>
- </figure>
+<p>blah blah blah</p>
  <ol>
  <li>You can just link to it</li>
  <li>Creative Commons assets have no copyright</li>
  <li>If someone else created it, you’ll have to pay to use it</li>
  <li>As long as you cite a Creative Commons asset, you can change it and use it freely</li>
  <li>If you use an image in your project, you need to add a figure number and caption</li>
- <li>placeholder</li>
- <li>placeholder</li>
- <li>placeholder</li>
- <li>placeholder</li>
- <li>placeholder</li>
+ <li>Creative Commons license means that an asset is free for noncommercial use</li>
+ <li>&ldquo;Labeled for reuse&rdquo; means an asset is not protected by copyright.  </li>
+ <li>Research-paper style citations are appropriate for all digital projects</li>
+ <li>Fair use deals with how much of a source you can borrow or quote</li>
+ <li>Fair use allows you to include copyrighted material without permission when you are doing your college assignments</li>
  </ol>
 </p>
 </div>
