adding font-awesome

--- a/tenMyths/-includes/jumbotron.html
+++ b/tenMyths/-includes/jumbotron.html
@@ -5,6 +5,7 @@
         </div>
         
 <div class="row" onclick='window.location.href="https://tengrrl.github.io/tenMyths/"' style="cursor: pointer;">
+<div class="col-md-12" style="margin-top: 15px;"><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i></div>
 </div>
 
 <div class="row">
