--- a/tenMyths/-includes/jumbotron.html
+++ b/tenMyths/-includes/jumbotron.html
@@ -5,7 +5,18 @@
         </div>
         
 <div class="row" onclick='window.location.href="https://tengrrl.github.io/tenMyths/"' style="cursor: pointer;">
-<div class="col-md-12" style="margin-top: 15px;"><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-creative-commons" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-creative-commons-sa" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-creative-commons-by" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-creative-commons-nc" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-creative-commons-nd" style="color: #FF6600;margin-left: 3px;"></i><i class="fa creative-commons-share" style="color: #FF6600;margin-left: 3px;"></i><i class="fa creative-commons-remix" style="color: #FF6600;margin-left: 3px;"></i><i class="fa creative-commons-sampling" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i><i class="fa fa-copyright" style="color: #FF6600;margin-left: 3px;"></i></div>
+<div class="col-md-12" style="margin-top: 15px;">
+<i class="fa fa-copyright" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-by" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-sa" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-nc" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-nd" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab creative-commons-share" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-remix" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab creative-commons-sampling" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fa fa-copyright" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fa fa-copyright" style="color: #FF6600;margin-left: 15px;"></i></div>
 </div>
 
 <div class="row">
