font awesome redo

--- a/tenMyths/-includes/jumbotron.html
+++ b/tenMyths/-includes/jumbotron.html
@@ -12,7 +12,7 @@
 <i class="fab fa-creative-commons-sa" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons-nc" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons-nd" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab creative-commons-share" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-share" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons-remix" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab creative-commons-sampling" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fa fa-copyright" style="color: #FF6600;margin-left: 15px;"></i>
