--- a/tenMyths/index.html
+++ b/tenMyths/index.html
@@ -9,6 +9,7 @@
 
 <!-- FontAwesome library -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/5.0.11/css/font-awesome.min.css" />
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
