font awesome redo

--- a/tenMyths/-includes/jumbotron.html
+++ b/tenMyths/-includes/jumbotron.html
@@ -1,12 +1,12 @@
 <div class="jumbotron" style="background-color: #fefefe;padding: 0px 15px 15px 15px;border-bottom: 3px solid #FF6600;">
 <div class="container-fluid">
 <div class="row" onclick='window.location.href="https://tengrrl.github.io/tenMyths/"' style="cursor: pointer;">
-            <div class="col-md-12"><h1 class="align-middle;" style="font-size: 48px;">Ten Myths Taught about Documentation in Digital Projects</h1></div>     
+            <div class="col-md-12"><h1 class="align-middle;" style="font-size: 48px;">Ten Myths 1Taught about Documentation in Digital Projects</h1></div>     
         </div>
         
 <div class="row" onclick='window.location.href="https://tengrrl.github.io/tenMyths/"' style="cursor: pointer;">
 <div class="col-md-12" style="margin-top: 15px;">
-<i class="fa fa-copyright" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fa fa-copyright fa-lg" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons-by" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons-sa" style="color: #FF6600;margin-left: 15px;"></i>
