font awesome redo

--- a/tenMyths/-includes/jumbotron.html
+++ b/tenMyths/-includes/jumbotron.html
@@ -15,7 +15,7 @@
 <i class="fab fa-creative-commons-share" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons-remix" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab creative-commons-sampling" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fa fa-copyright" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab creative-commons-pd" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fa fa-copyright" style="color: #FF6600;margin-left: 15px;"></i></div>
 </div>
 
