--- a/tenMyths/-includes/jumbotron.html
+++ b/tenMyths/-includes/jumbotron.html
@@ -6,17 +6,17 @@
         
 <div class="row" onclick='window.location.href="https://tengrrl.github.io/tenMyths/"' style="cursor: pointer;">
 <div class="col-md-12" style="margin-top: 15px;">
-<i class="fa fa-copyright fa-lg" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab fa-creative-commons" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab fa-creative-commons-by" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab fa-creative-commons-sa" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab fa-creative-commons-nc" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab fa-creative-commons-nd" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab fa-creative-commons-share" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab fa-creative-commons-remix" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab creative-commons-sampling" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab creative-commons-pd" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fa fa-copyright" style="color: #FF6600;margin-left: 15px;"></i></div>
+<i class="fa fa-copyright  fa-5x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons fa-5x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-by fa-5x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-sa fa-5x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-nc fa-5x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-nd fa-5x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-share fa-5x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-remix fa-5x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab creative-commons-sampling fa-5x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-pd fa-5x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fa fa-copyright fa-5x" style="color: #FF6600;margin-left: 15px;"></i></div>
 </div>
 
 <div class="row">
