--- a/tenMyths/-includes/jumbotron.html
+++ b/tenMyths/-includes/jumbotron.html
@@ -5,7 +5,7 @@
         </div>
         
 <div class="row" onclick='window.location.href="https://tengrrl.github.io/tenMyths/"' style="cursor: pointer;">
-<div class="col-md-12" style="margin-top: 15px;">
+<div class="col-md-12" style="margin-top: 15px;display: flex;justify-content: space-between;">
 <i class="far fa-copyright fa-3x" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons fa-3x" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons-by fa-3x" style="color: #FF6600;margin-left: 15px;"></i>
