--- a/tenMyths/-includes/jumbotron.html
+++ b/tenMyths/-includes/jumbotron.html
@@ -20,8 +20,8 @@
 </div>
 
 <div class="row">
-<div class="col-md-12"><h2 style="text-align: right;font-size: 24px;"><small>How We Teach Students to Cite and Credit Sources (or Don’t)<br />
-Traci Gardner <a href="mailto:tengrrl@vt.edu">&lt;tengrrl @ vt. edu&gt;</a></small></h2>
+<div class="col-md-12"><h2 style="text-align: right;">How We Teach Students to Cite and Credit Sources (or Don’t)<br />
+Traci Gardner <a href="mailto:tengrrl@vt.edu">&lt;tengrrl @ vt. edu&gt;</a></h2>
 </div>
 </div>
 </div>
