--- a/tenMyths/-includes/sidebar.html
+++ b/tenMyths/-includes/sidebar.html
@@ -1,6 +1,7 @@
 <h2 class="page-header-sidebar">Table of Contents</h2>
 <div class="just-padding">
 <div class="list-group list-group-root well">
+<a href="#">Home</a>
 <!-- First Menu Item -->  
   <a href="#item-1" class="list-group-item" data-toggle="collapse">
     <i class="fa fa-angle-right pull-left"></i>Handbook Survey
