Trying a title attrib for FA

--- a/tenMyths/-includes/jumbotron.html
+++ b/tenMyths/-includes/jumbotron.html
@@ -1,9 +1,9 @@
 <div class="jumbotron" style="background-color: #fefefe;padding: 0px 15px 15px 15px;border-bottom: 3px solid #FF6600;">
 <div class="container-fluid">
 <div class="row" onclick='window.location.href="https://tengrrl.github.io/tenMyths/"' style="cursor: pointer;">
-            <div class="col-md-12"><h1 class="align-middle;" style="font-size: 48px;">Ten Myths Taught about Documentation in Digital Projects</h1></div>     
+            <div class="col-md-12"><h1 class="align-middle;" style="font-size: 48px;">Ten Myths Taught about Documentation in Digital Projects</h1></div>
         </div>
-        
+
 <div class="row" onclick='window.location.href="https://tengrrl.github.io/tenMyths/"' style="cursor: pointer;">
 <div class="col-md-12" style="margin-top: 15px;display: flex;justify-content: space-between;">
 <i class="far fa-copyright fa-3x" style="color: #FF6600;margin-left: 15px;"></i>
@@ -15,12 +15,12 @@
 <i class="fab fa-creative-commons-pd fa-3x" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons-share fa-3x" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons-remix fa-3x" style="color: #FF6600;margin-left: 15px;"></i>
-<i class="fab fa-creative-commons-sampling fa-3x" style="color: #FF6600;margin-left: 15px;"></i>
+<i class="fab fa-creative-commons-sampling fa-3x" title="Creative Commons Sampling" style="color: #FF6600;margin-left: 15px;"></i>
 <i class="fab fa-creative-commons-pd-alt fa-3x" style="color: #FF6600;margin-left: 15px;"></i></div>
 </div>
 
 <div class="row">
-<div class="col-md-12"><h2 style="text-align: right;font-size: 24px;">How We Teach Students to Cite and Credit Sources (or Don’t)<br />
+<div class="col-md-12"><h2 style="text-align: right;font-size: 24px;">What We Need to Teach Students about Citation and Attribution<br />
 Traci Gardner <a href="mailto:tengrrl@vt.edu">&lt;tengrrl @ vt. edu&gt;</a></h2>
 </div>
 </div>
